<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector_white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/widget_book_cover"
        android:layout_width="@dimen/list_icon"
        android:layout_height="@dimen/list_icon"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/book_cover"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_library_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textPrimary" />

        <TextView
            android:id="@+id/widget_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_last_update"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textSecondary" />

    </LinearLayout>

</LinearLayout>
