<!-- Layout for book list item -->
<!-- Make the background of our selector a non-transparent color -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_selector"
    android:paddingLeft="@dimen/list_item_extra_padding"
    android:paddingRight="@dimen/list_item_extra_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/fullBookCover"
            android:layout_width="@dimen/list_icon"
            android:layout_height="@dimen/list_icon"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/book_cover"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listBookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/book_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/textPrimary" />

            <TextView
                android:id="@+id/listBookSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/book_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textSecondary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/listBookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/book_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textSecondary" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
